src/components/app/Container/Main/index.css
.Main {
  flex: 1;
  margin-left: 18.5%;
  margin-right: 0.7%;
  border-radius: 6px;
  min-height: calc(100vh - 160px);
  background-color: var(--blog-bg-default);
  box-shadow: var(--blog-shadow);
}

.Main:has(> .Banner-Wrap) {
  background-color: transparent;
  box-shadow: none;
}

@media screen and (max-width: 1240px) {
  .Main {
    margin-left: 30%;
    margin-right: 8px;
  }
}

@media screen and (max-width: 960px) {
  .Main {
    margin-left: 8px;
    margin-right: 8px;
  }
}

